# customiso

./: .gitignore  Makefile.am  README.md  configure.ac  local-dvd.repo
ks/: minimal.ks
